--- a/style.css
+++ b/style.css
@@ -5,3 +5,90 @@
   text-decoration: none;
   list-style: none;
 }
+.header{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: black;
+}
+.nav_bar{
+  background: black;
+  width:95%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.nav_bar--menu--checkbox{
+  display: none;
+  cursor: pointer;
+}
+#menu-toggle {
+  display: none;
+}
+.nav_bar--logo{
+  width: 20%;
+  height: 100%;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+}
+.nav_bar--categorias{
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  color:#fff;
+  font-size: 1rem;
+  overflow: hidden;
+}
+.nav_bar--categorias--links,.nav_bar--redes--links {
+  color:#fff;
+  font-size:0.8rem;
+  padding: 7px 13px;
+  border-radius: 3px;
+  text-align: center;
+}
+.nav_bar--redes{
+  width: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.nav_bar--categorias--li{
+  text-align: center;
+}
+.nav_bar--categorias--links:hover,.nav_bar--redes--links:hover{
+  background-color: #FB6F92;
+  transition: .5s;
+}
+.rosa{
+  display: none;
+}
+hr{
+  width: 100%;
+  height: 4px;
+  background: grey;
+  margin: 20px 5px;
+}
+.redes-text{
+  display: none;
+}
+@media(max-width:1050px){
+  .header{
+    height: 5%;
+  }
+  .nav_bar--categorias{
+    position: absolute;
+    top:8%;
+    height: 100vh;
+    flex-direction: column;
+    background-color: black;
+    opacity: .8;
+    align-items: start;
+    color: white;
+    width: 100%;
+    left: -100%;    
+    transition: all .5s;
+  }
+  
