--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   text-decoration: none;
   list-style: none;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .header{
   width: 100%;
@@ -91,4 +92,105 @@ hr{
     left: -100%;    
     transition: all .5s;
   }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.section--principal{
+  display:flex; 
+  flex-direction: column; 
+  text-align: center;
+  align-content: space-around;
+  margin-top: 3rem;
   
+}
+
+.articles--section--principal{
+  display:flex; 
+  flex-wrap:wrap; 
+  justify-content:space-evenly;
+  
+  
+}
+
+.secundaria{
+  width: 400px;
+}
+
+.principal{
+  width: 800px;
+}
+
+.mediana{
+  width: 500px;
+ 
+}
+.article--card{
+  /* background-color:pink;  */
+  display:flex; 
+  flex-direction: column; 
+  align-items: center; 
+  margin: 1rem;
+  position: relative;
+  overflow: hidden;
+  
+}
+
+.card--img--secundaria{  
+  width: 100%;
+  height:100%;
+}
+.card--img--principal{  
+  width: 100%;
+  height:100%;
+}
+
+.titulo--card--categoria{
+  text-underline-position: auto;
+  border-bottom: 5px solid #88b2ff;
+  margin-top:1rem;
+}
+
+.titulo--card--nota{
+  text-align:center;
+  margin:1rem;
+  font-weight: 200;
+}
+
+.logos-empresa{
+  height: 50px;
+  justify-content:space-evenly;
+}
+
+
+
+
