--- a/style.css
+++ b/style.css
@@ -1,94 +1,221 @@
+
 *{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  box-sizing: border-box;/*para que no se salga el elemento*/
+  margin:0;
+  padding:0;
   text-decoration: none;
   list-style: none;
-}
-.header{
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: black;
-}
-.nav_bar{
-  background: black;
-  width:95%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.nav_bar--menu--checkbox{
-  display: none;
-  cursor: pointer;
-}
-#menu-toggle {
-  display: none;
-}
-.nav_bar--logo{
-  width: 20%;
-  height: 100%;
-  padding: 10px;
-  display: flex;
-  align-items: center;
-}
-.nav_bar--categorias{
-  width: 80%;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  color:#fff;
+  font-family: 'Nunito Sans', sans-serif;
   font-size: 1rem;
-  overflow: hidden;
 }
-.nav_bar--categorias--links,.nav_bar--redes--links {
-  color:#fff;
-  font-size:0.8rem;
-  padding: 7px 13px;
-  border-radius: 3px;
-  text-align: center;
+.menu__nav{
+  background-color: black;
+  height: 80px;
+  width: 100%;
 }
-.nav_bar--redes{
-  width: 20%;
+.menu__nav--img{
+  height: 50px;
+  width: auto;
+  position: absolute;
+  margin-top:10px;
+  margin-left: 20px;
+}
+.menu__nav--nav_links{
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
+  margin-left: 80px;
 }
-.nav_bar--categorias--li{
-  text-align: center;
+.menu__nav--nav_links li{
+  display:inline-block;
+  line-height: 80px;
+
 }
-.nav_bar--categorias--links:hover,.nav_bar--redes--links:hover{
+.menu__nav--links--enlace, .menu__nav--links--enlace--redes {
+  color:#fff;
+  font-size:1.rem;
+  padding: 2px 3px;
+  border-radius: 3px;
+}
+.menu__nav--links--enlace:hover, .menu__nav--links--enlace--redes:hover{
   background-color: #FB6F92;
   transition: .5s;
 }
+.menu__nav--label{
+  font-size:20px;
+}
+.menu__nav--links--redes{
+  color:#fff;
+  font-size:1.3rem;
+  padding: 7px 13px;
+  border-radius: 3px;
+
+}
+.menu__nav--links--redes:hover{
+  background-color: #FB6F92;
+  transition: .5s;
+}
+
+.menu__nav--menu{
+  height:25px;
+  float: left;
+  line-height: 80px;
+  margin-top:20px ;
+  cursor:pointer;
+  display: none;
+}
 .rosa{
+  display:none;
+  color:black;
+}
+
+#menu__nav--check{
+display:none;
+}
+.menu__nav--links--enlace--suscripcion{
   display: none;
 }
-hr{
+
+
+@media(max-width:1052px){
+.menu__nav{
+  padding-left: 10px;
+}
+.menu__nav--links--enlace{
+font-size: .8rem;
+}
+}
+@media(max-width: 800px){
+  .menu__nav--menu{
+  display:block;
+  /*margin-right: 10px;*/
+}
+.menu__nav--nav_links{
+  position: fixed;
+  display: block;
   width: 100%;
-  height: 4px;
-  background: grey;
-  margin: 20px 5px;
+  height: 100vh;
+  background: black;
+  opacity: 0.9;
+  top:80px;
+  right:100%;
+  text-align: center;
+  transition: all .5s;
 }
-.redes-text{
-  display: none;
+.menu__nav--nav_links li{
+display: block;
+margin: 35px 30px;
+line-height: 20px;
+text-align: left;
 }
-@media(max-width:1050px){
-  .header{
-    height: 5%;
-  }
-  .nav_bar--categorias{
-    position: absolute;
-    top:8%;
-    height: 100vh;
-    flex-direction: column;
-    background-color: black;
-    opacity: .8;
-    align-items: start;
-    color: white;
-    width: 100%;
-    left: -100%;    
-    transition: all .5s;
-  }
+.menu__nav--links--enlace{
+  font-size: 2 rem ;
+  text-align: right;
+  text-decoration: underline;
+  text-decoration-color: #FB6F92;
+}
+#menu__nav--links--enlace--redes{
+display: flex;
+align-items: end
+}
+.menu__nav--links--enlace:hover{
+  background: none;
+  color: #FB6F92;
+}
+#menu__nav--check:checked ~ ul {
+  right:0;
+}
+.rosa{
+  color:#FB6F92;
+ text-align: left;
+  display:inline-block;
+}
+.menu__nav--links--redes{
+  padding: 0;
+  border-radius: 3px;
+  display: inline-block;
+}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.section--principal{
+  display:flex; 
+  flex-direction: column; 
+  text-align: center;
+  align-content: space-around;
+  margin-top: 3rem;
   
+}
+
+.articles--section--principal{
+  display:flex; 
+  flex-wrap:wrap; 
+  justify-content:space-evenly;
+  
+  
+}
+
+.secundaria{
+  width: 400px;
+}
+
+.principal{
+  width: 800px;
+}
+
+.mediana{
+  width: 500px;
+ 
+}
+.article--card{
+  /* background-color:pink;  */
+  display:flex; 
+  flex-direction: column; 
+  align-items: center; 
+  margin: 1rem;
+  position: relative;
+  overflow: hidden;
+  
+}
+
+.card--img--secundaria{  
+  width: 100%;
+  height:100%;
+}
+.card--img--principal{  
+  width: 100%;
+  height:100%;
+}
+
+.titulo--card--categoria{
+  text-underline-position: auto;
+  border-bottom: 5px solid #88b2ff;
+  margin-top:1rem;
+}
+
+.titulo--card--nota{
+  text-align:center;
+  margin:1rem;
+  font-weight: 200;
+}
+
+.logos-empresa{
+  height: 50px;
+  justify-content:space-evenly;
+}
