--- a/style.css
+++ b/style.css
@@ -10,8 +10,13 @@
 }
 .menu__nav{
   background-color: black;
+  display:flex;
   height: 80px;
   width: 100%;
+}
+.menu__nav-img{
+  width: 20%;
+  height: 100%;
 }
 .menu__nav--img{
   height: 50px;
@@ -21,10 +26,11 @@
   margin-left: 20px;
 }
 .menu__nav--nav_links{
+  width: 80%;
+  height: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  margin-left: 80px;
+  justify-content: space-around;
 }
 .menu__nav--nav_links li{
   display:inline-block;
@@ -44,16 +50,19 @@
 .menu__nav--label{
   font-size:20px;
 }
+.links__redes{
+  width:10%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
 .menu__nav--links--redes{
   color:#fff;
   font-size:1.3rem;
   padding: 7px 13px;
   border-radius: 3px;
 
-}
-.menu__nav--links--redes:hover{
-  background-color: #FB6F92;
-  transition: .5s;
 }
 
 .menu__nav--menu{
@@ -69,13 +78,9 @@
   color:black;
 }
 
-#menu__nav--check{
+#menu__nav--check, .menu__nav--links--enlace--suscripcion{
 display:none;
 }
-.menu__nav--links--enlace--suscripcion{
-  display: none;
-}
-
 
 @media(max-width:1052px){
 .menu__nav{
@@ -92,31 +97,67 @@ font-size: .8rem;
 }
 .menu__nav--nav_links{
   position: fixed;
+  z-index: 1;
   display: block;
   width: 100%;
   height: 100vh;
-  background: black;
-  opacity: 0.9;
+  background: rgba(10, 10, 10, 0.9);
   top:80px;
   right:100%;
   text-align: center;
   transition: all .5s;
 }
-.menu__nav--nav_links li{
+.menu__nav--nav_links > li{
 display: block;
-margin: 35px 30px;
+width: 100%;
+padding-left:5%;
+height: fit-content;
+border-bottom:1px solid gray;
 line-height: 20px;
 text-align: left;
+margin-inline:auto;
+padding-top: 2px;
+padding-bottom: 2px;
+position:relative;
+cursor:pointer;
+
+}
+.menu__nav--nav_links > li:hover{
+  background-color:#FB6F92;
+  transition: all 0.75s;
+}
+.menu__nav--nav_links > li::before{
+  content: "";
+  position:absolute;
+  width:10px;
+  height: 80%;
+  background-color: #88b2ff;
+  left:10px;
 }
 .menu__nav--links--enlace{
   font-size: 2 rem ;
   text-align: right;
-  text-decoration: underline;
-  text-decoration-color: #FB6F92;
+
 }
-#menu__nav--links--enlace--redes{
-display: flex;
-align-items: end
+
+.links__redes{
+  width:70%;
+  height: 15%;
+  margin-inline:auto;
+  position: relative;
+  align-items: end;
+  margin-top:20px ;
+}
+.links__redes::before {
+  content: attr(mensaje);
+  position: absolute;
+  width: fit-content;
+  height: fit-content;
+  font-size:20px;
+  left:15%;
+  top:0;
+  color:#ffffff;
+
 }
 .menu__nav--links--enlace:hover{
   background: none;
