--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 *{
+  
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -6,6 +7,8 @@
   list-style: none;
   font-family: Arial, Helvetica, sans-serif;
 }
+ 
+
 .header{
   width: 100%;
   display: flex;
@@ -94,51 +97,20 @@ hr{
   }
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .section--principal{
   display:flex; 
   flex-direction: column; 
   text-align: center;
   align-content: space-around;
   margin-top: 3rem;
+  margin-bottom:3rem;
   
 }
 
 .articles--section--principal{
   display:flex; 
   flex-wrap:wrap; 
-  justify-content:space-evenly;
-  
+  justify-content:space-evenly; 
   
 }
 
@@ -154,6 +126,11 @@ hr{
   width: 500px;
  
 }
+
+.small{
+  width:200px;
+
+}
 .article--card{
   /* background-color:pink;  */
   display:flex; 
@@ -167,16 +144,16 @@ hr{
 
 .card--img--secundaria{  
   width: 100%;
-  height:100%;
+  height:80%;
 }
 .card--img--principal{  
-  width: 100%;
-  height:100%;
+ width: 100%;
+  height:80%;
 }
 
 .titulo--card--categoria{
   text-underline-position: auto;
-  border-bottom: 5px solid #88b2ff;
+  border-bottom: 5px solid #de41d1;
   margin-top:1rem;
 }
 
@@ -191,6 +168,23 @@ hr{
   justify-content:space-evenly;
 }
 
+.article--card--video{
+  position: relative;
+  display: inline-block;
+  text-align: center;
+}
+.texto--categoria--video{
+  width: 100%;
+  position: absolute;
+  top: 25rem;
+  background-color: rgb(44, 203, 150);
+  color: white;
+  padding: 1rem;
+}
 
 
 
+
+@media screen and (min-width: 600px){
+  
+} 
