--- a/mobilefirst/mobilefirst.css
+++ b/mobilefirst/mobilefirst.css
@@ -39,7 +39,7 @@ body{
     gap: 1rem;
   }
   
-  .articulo__principal-titulo{
+  .articulo-titulo{
     gap: 0.5rem;
     font-size: 1rem;
     text-underline-position:below;
@@ -51,72 +51,70 @@ body{
     margin-bottom: 2rem;
   }
   
-  .seccion__secundaria{
-    margin: 0.5rem;
-    display:flex;
-    flex-direction: column;
-    gap: 1rem;
-   
-  }
   
-  .secondary-article-wrapper{
-    display: flex;
-    flex-direction: column; 
-    gap: 0.5rem;
-  }
-  
-  .secondary-article{
+  .articulo__secundario{
     display: grid;
     grid-template-columns: 6fr 2fr;
     gap: 1rem;
     align-items: stretch;
   }
-  
-  .secondary-article-title{
+  .articulo__secundario-wrapper-text{
+    display: flex;
+    flex-direction: column; 
+    gap: 0.5rem;
+  }
+   
+  .articulo__secundario-title{
+    gap: 0.5rem;
     font-size: 1rem;
-    text-underline-position: auto;
-  border-bottom: 5px solid #de41d1;
-  margin-top:1rem;
+    text-underline-position:below;
+    border-bottom: 3px solid #de41d1;
   }
   
-  .secondary-article-description{
+  .articulo__secundario-descripcion
+  .articulo__descubre-descripcion{
     line-height: 0.8rem;
   }
   
-  
-
-
-
-  .new-section{
-    margin-top: 2.75rem;
-    background-color: black;
-    padding:1rem;
-  }
-  
-  .new-wrapper{
+  .seccion__secundaria,
+  .seccion__juegos,
+  .seccion__videos,
+  .seccion__tendencia{
+    text-align: center;
+    margin: 0.5rem;
     display:flex;
     flex-direction: column;
-    
+    gap: 1rem;
+  
+  }
+  .articulo__juegos{
+    border-radius: 10px;
+    margin-top: 1rem;
+  }
+ .boton__juegos{
+  margin-top: 1rem;
+  font-family: inherit;
+  padding: 0.5rem;
+  border-radius: 20px;
+ }
+
+ .articulo__video-contenedor-texto{
+  background-color: aquamarine;
+ }
+
+  .seccion__descubre{
+    margin-top: 2.75rem;
+    padding:1rem;
+    /* background-color: rgb(222, 215, 215); */
   }
   
-  .new-title{
-    color: white;
-    font-weight: 700;
-    padding:0 1rem;
-  }
-  .new-article{
-    color:white;
+  .articulo__descubre{
+    background-color: rgb(222, 215, 215);
     margin: 1rem;
-    border-bottom: 1px solid white;
+    /* border-bottom: 10px solid rgb(203, 25, 186); */
     padding-block: 1rem;
   }
   
-  .new-article-title{
-    font-size: 1rem;
-    margin-top: 0.7rem;
-  }
-  .new-article-description{
-    color: white;
-  }
+ 
   
   
