mobilefirst con menu desplegable

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   padding:0;
   text-decoration: none;
   list-style: none;
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 1rem;
 }
 .menu__nav{
