--- a/mobilefirst/mobilefirst.css
+++ b/mobilefirst/mobilefirst.css
@@ -1,181 +1,194 @@
-
-*{
-  box-sizing: border-box;/*para que no se salga el elemento*/
-  margin:0;
-  padding:0;
-  text-decoration: none;
-  list-style: none;
-  font-family: 'Nunito Sans', sans-serif;
-  font-size: 1rem;
+/* Estilos globales */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-.menu__nav{
+
+/* Tipografía y elementos base */
+body {
+  font-family: 'Nunito Sans', sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+ul {
+  list-style: none;
+}
+
+/* Menú de navegación */
+.menu__nav {
   background-color: black;
-  display:flex;
+  display: flex;
+  align-items: center;
   height: 80px;
   width: 100%;
 }
-.menu__nav-img{
+
+.menu__nav-img {
   width: 20%;
   height: 100%;
 }
-.menu__nav--img{
+
+.menu__nav--img {
   height: 50px;
   width: auto;
   position: absolute;
-  margin-top:10px;
+  margin-top: 10px;
   margin-left: 20px;
 }
-.menu__nav--nav_links{
+
+.menu__nav--nav_links,
+.links__redes {
   width: 80%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: space-around;
 }
-.menu__nav--nav_links li{
-  display:inline-block;
-  line-height: 80px;
 
-}
-.menu__nav--links--enlace, .menu__nav--links--enlace--redes {
-  color:#fff;
-  font-size:1.rem;
+.menu__nav--links--enlace,
+.menu__nav--links--enlace--redes {
+  color: #fff;
+  font-size: 1rem;
   padding: 2px 3px;
   border-radius: 3px;
 }
-.menu__nav--links--enlace:hover, .menu__nav--links--enlace--redes:hover{
-  background-color: #FB6F92;
-  transition: .5s;
+
+.menu__nav--links--enlace:hover,
+.menu__nav--links--enlace--redes:hover {
+  background-color: #fb6f92;
+  transition: 0.5s;
 }
-.menu__nav--label{
-  font-size:20px;
-}
-.links__redes{
-  width:10%;
+
+.links__redes {
+  width: 10%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: space-around;
 }
-.menu__nav--links--redes{
-  color:#fff;
-  font-size:1.3rem;
+
+.menu__nav--links--redes {
+  color: #fff;
+  font-size: 1.3rem;
   padding: 7px 13px;
   border-radius: 3px;
-
 }
 
-.menu__nav--menu{
-  height:25px;
+.menu__nav--menu {
+  height: 25px;
   float: left;
   line-height: 80px;
-  margin-top:20px ;
-  cursor:pointer;
+  margin-top: 20px;
+  cursor: pointer;
   display: none;
 }
-.rosa{
-  display:none;
-  color:black;
+
+.rosa {
+  color: #fb6f92;
+  display: none;
 }
 
-#menu__nav--check, .menu__nav--links--enlace--suscripcion{
-display:none;
+#menu__nav--check,
+.menu__nav--links--enlace--suscripcion {
+  display: none;
 }
 
-@media(max-width:1052px){
-.menu__nav{
-  padding-left: 10px;
-}
-.menu__nav--links--enlace{
-font-size: .8rem;
-}
-}
-@media(max-width: 800px){
-  .menu__nav--menu{
-  display:block;
-  /*margin-right: 10px;*/
-}
-.menu__nav--nav_links{
+.menu__nav--nav_links {
   position: fixed;
   z-index: 1;
   display: block;
   width: 100%;
   height: 100vh;
   background: rgba(10, 10, 10, 0.9);
-  top:80px;
-  right:100%;
+  top: 80px;
+  right: 100%;
   text-align: center;
-  transition: all .5s;
+  transition: all 0.5s;
 }
-.menu__nav--nav_links > li{
-display: block;
-width: 100%;
-padding-left:5%;
-height: fit-content;
-border-bottom:1px solid gray;
-line-height: 20px;
-text-align: left;
-margin-inline:auto;
-padding-top: 2px;
-padding-bottom: 2px;
-position:relative;
-cursor:pointer;
 
+.menu__nav--nav_links > li {
+  display: block;
+  width: 100%;
+  padding-left: 5%;
+  height: fit-content;
+  border-bottom: 1px solid gray;
+  line-height: 20px;
+  text-align: left;
+  margin-inline: auto;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  position: relative;
+  cursor: pointer;
 }
-.menu__nav--nav_links > li:hover{
-  background-color:#FB6F92;
+
+.menu__nav--nav_links > li:hover {
+  background-color: #fb6f92;
   transition: all 0.75s;
 }
-.menu__nav--nav_links > li::before{
+
+.menu__nav--nav_links > li::before {
   content: "";
-  position:absolute;
-  width:10px;
+  position: absolute;
+  width: 10px;
   height: 80%;
   background-color: #88b2ff;
-  left:10px;
+  left: 10px;
 }
-.menu__nav--links--enlace{
-  font-size: 2 rem ;
+
+.menu__nav--links--enlace {
+  font-size: 2rem;
   text-align: right;
-
 }
 
-.links__redes{
-  width:70%;
+.links__redes {
+  width: 70%;
   height: 15%;
-  margin-inline:auto;
+  margin-inline: auto;
   position: relative;
   align-items: end;
-  margin-top:20px ;
+  margin-top: 20px;
 }
+
 .links__redes::before {
   content: attr(mensaje);
   position: absolute;
   width: fit-content;
   height: fit-content;
-  font-size:20px;
-  left:15%;
-  top:0;
-  color:#ffffff;
+  font-size: 20px;
+  left: 15%;
+  top: 0;
+  color: #ffffff;
+}
 
-}
-.menu__nav--links--enlace:hover{
+.menu__nav--links--enlace:hover {
   background: none;
-  color: #FB6F92;
+  color: #fb6f92;
 }
+
 #menu__nav--check:checked ~ ul {
-  right:0;
+  right: 0;
 }
-.rosa{
-  color:#FB6F92;
- text-align: left;
-  display:inline-block;
+
+.rosa {
+  color: #fb6f92;
+  text-align: left;
+  display: inline-block;
 }
-.menu__nav--links--redes{
+
+.menu__nav--links--redes {
   padding: 0;
   border-radius: 3px;
   display: inline-block;
-}
 }
 
 
@@ -298,5 +311,18 @@ body{
   }
   
  
-  
-  
+  @media(max-width:1052px){
+    .menu__nav{
+      padding-left: 10px;
+    }
+    .menu__nav--links--enlace{
+    font-size: .8rem;
+    }
+    }
+    @media(max-width: 800px){
+      .menu__nav--menu{
+      display:block;
+      /*margin-right: 10px;*/
+    }}
+
+    
