--- a/mobileActitud.css
+++ b/mobileActitud.css
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: "Roboto-Black";
+    src: url("/Roboto/Roboto-Black.woff") format(.woff);
+    font-display:swap;
+  }
+  @font-face {
+    font-family: "Roboto-BoldItalic";
+    src: url("/Roboto/Roboto-BoldItalic.woff") format(.woff);
+    font-display:swap;
+  }
 .section__principal{
  width:360px;
  height: auto;
@@ -28,7 +38,8 @@ width: 100%;
     width: 100%;
     height: 90px;
     margin-left: 0;
-    background-color: gray ; 
+    background-color: gray ;
+    font-family: "Roboto-Black";
 }
 
 .figure__principal{
@@ -64,7 +75,7 @@ width: 100%;
 background-color: #17BFA375;
 width: 149px;
 height: 57px;
-font-style: italic;
+font-family:"Roboto-BlackItalic";
 }
 
 
